--- a/src/component/Round.scss
+++ b/src/component/Round.scss
@@ -158,6 +158,11 @@ h1 {
       right: -20px;
       width: 1px;
       height: 105px;
+      /* ie11 */
+      _:-ms-fullscreen,
+      :root & {
+        right: 2px;
+      }
     }
     .horizon_line {
       top: calc(50% - 52px);
@@ -166,6 +171,13 @@ h1 {
       right: -20px;
       width: 40px;
       height: 1px;
+
+      /* ie11 */
+      _:-ms-fullscreen,
+      :root & {
+        right: 2px;
+      }
+
       &.bottom {
         top: calc(50% + 52px);
       }
@@ -176,6 +188,12 @@ h1 {
         right: -40px;
         width: 20px;
         height: 1px;
+
+        /* ie11 */
+        _:-ms-fullscreen,
+        :root & {
+          right: -18px;
+        }
       }
     }
     @if $matchtype == 2 {
